umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_biphenyl.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: aromatic
atom_typing:
  success: true
  summary:
    atom_count: 12
    bond_count: 13
    topology: Kw?O@?K@@@AB
    atoms:
      - "{Cv3a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{Cv3a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
    aromatic_systems:
      - atoms:
          - 0
          - 1
          - 2
          - 4
          - 5
          - 8
        electrons: 6
        charge: 0
      - atoms:
          - 3
          - 6
          - 7
          - 9
          - 10
          - 11
        electrons: 6
        charge: 0
counts:
  success: true
  summary:
    atom_count: 12
    bond_count: 13
    topology: Kw?O@?K@@@AB
    atoms:
      - "{Cv3a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{Cv3a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
    aromatic_systems:
      - atoms:
          - 0
          - 1
          - 2
          - 4
          - 5
          - 8
        electrons: 6
        charge: 0
      - atoms:
          - 3
          - 6
          - 7
          - 9
          - 10
          - 11
        electrons: 6
        charge: 0
