umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_furan.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "O#n#v2#a2" "1" "C#h#v2#a" "2" "C#h#v2#a" "3" "C#h#v2#a" "4" "C#h#v2#a"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "1"] ["3" "4" "1"] ["4" "0" "1"]] :aromatic [{:atoms ["0" "1" "2" "3" "4"]}] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "O#n#v2#a2" "1" "C#h#v2#a" "2" "C#h#v2#a" "3" "C#h#v2#a" "4" "C#h#v2#a"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "1"] ["3" "4" "1"] ["4" "0" "1"]] :aromatic [{:atoms ["0" "1" "2" "3" "4"]}] :charge 0 :spin "#u0 #s1"}}}
