umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_pyridine.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: aromatic
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: EoaW
    atoms:
      - "N#n#v2#a"
      - "C#h#v2#a"
      - "C#h#v2#a"
      - "C#h#v2#a"
      - "C#h#v2#a"
      - "C#h#v2#a"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
    aromatic_systems:
      - atoms:
          - 0
          - 1
          - 2
          - 3
          - 4
          - 5
        electrons: 6
        charge: 0
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: EoaW
    atoms:
      - "N#n#v2#a"
      - "C#h#v2#a"
      - "C#h#v2#a"
      - "C#h#v2#a"
      - "C#h#v2#a"
      - "C#h#v2#a"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
    aromatic_systems:
      - atoms:
          - 0
          - 1
          - 2
          - 3
          - 4
          - 5
        electrons: 6
        charge: 0
