umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_pyrrole.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: aromatic
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 5
    topology: DpK
    atoms:
      - "{NHv2a2}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
    aromatic_systems:
      - atoms:
          - 0
          - 1
          - 2
          - 3
          - 4
        electrons: 6
        charge: 0
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 5
    topology: DpK
    atoms:
      - "{NHv2a2}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
    aromatic_systems:
      - atoms:
          - 0
          - 1
          - 2
          - 3
          - 4
        electrons: 6
        charge: 0
