umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_toluene.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: aromatic
atom_typing:
  success: true
  summary:
    atom_count: 7
    bond_count: 7
    topology: FwGOW
    atoms:
      - "{Cv3a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CH3v1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 7
    bond_count: 7
    topology: FwGOW
    atoms:
      - "{Cv3a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CH3v1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
