umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_tropylium.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: aromatic
atom_typing:
  success: true
  summary:
    atom_count: 7
    bond_count: 7
    topology: FoOaW
    atoms:
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{C+Hv2a0}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
    aromatic_systems:
      - atoms:
          - 0
          - 1
          - 2
          - 3
          - 4
          - 5
          - 6
        electrons: 6
        charge: 0
counts:
  success: true
  summary:
    atom_count: 7
    bond_count: 7
    topology: FoOaW
    atoms:
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{C+Hv2a0}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
      - "{CHv2a1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
    aromatic_systems:
      - atoms:
          - 0
          - 1
          - 2
          - 3
          - 4
          - 5
          - 6
        electrons: 6
        charge: 0
